# numba-minpack

./: .gitignore  .gitmodules  README.md  meson.build  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
minpack_numba/: __init__.py  dev.ipynb  minpack_numba.py  signatures.py  todo.md  utils.py
numba_minpack/: meson.build
tests/: test_dpmpar.py  test_hybrd.py  test_hybrj.py  test_lmder.py  test_lmdif.py  test_lmstr.py
